--- a/index.html
+++ b/index.html
@@ -2,10 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="description"
-      content="an expense tracker is a software or application that helps to keep an accurate record of your money inflow and outflow."
-    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -13,14 +9,110 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="src/styles.css" />
+    <script
+      src="https://kit.fontawesome.com/75f32e9ed7.js"
+      crossorigin="anonymous"
+    ></script>
+
     <title>Expense Tracker</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1 class="text-center">MONEY MANAGER</h1>
-    <button class="btn btn-success p-4 fs-5">
-      <a href="about.html">LAUNCH APP</a>
-    </button>
-    <script src="src/script.js"></script>
+    <div class="container">
+      <div class="row">
+        <div class="col-1 mt-2">
+          <span class="user-icon"><i class="fa-solid fa-user"></i></span>
+        </div>
+        <div class="col-3 mt-2">
+          <p>
+            Welcome! <br />
+            <strong>Jane Doe</strong>
+          </p>
+        </div>
+
+        <div class="col-8 text-end mt-3">
+          <span class="notification-icon me-4"
+            ><i class="fa-regular fa-bell"></i
+          ></span>
+          <a href="#" class="more-icon"
+            ><i class="fa-solid fa-ellipsis-vertical"></i
+          ></a>
+        </div>
+      </div>
+
+      <div class="balance text-center pb-2">
+        <h6 class="pt-3 fs-4" id="wallet">Total Balance</h6>
+        <p class="money fs-2 fw-bold" id="balance">$0.00</p>
+      </div>
+
+      <div class="row inc-exp-container">
+        <div class="col income">
+          <span class="arrow-down"><i class="fa-solid fa-arrow-down"></i></span>
+
+          <p>
+            Income<br />
+            <span class="fw-medium fs-5" id="money-plus">+$0.00</span>
+          </p>
+        </div>
+
+        <div class="col expense">
+          <span class="arrow-up"><i class="fa-solid fa-arrow-up"></i></span>
+          <p>
+            Expenses <br />
+            <span class="fw-medium fs-5" id="money-minus">-$0.00</span>
+          </p>
+        </div>
+      </div>
+
+      <h5 class="text-center text-danger-emphasis">Transactions</h5>
+      <ul id="list"></ul>
+
+      <hr />
+      <h3 id="add-transaction">Add transaction</h3>
+      <form id="form">
+        <div class="form-control mb-3">
+          <label for="text"><strong>Text</strong></label> <br />
+          <input
+            type="text"
+            id="text"
+            placeholder="Enter text..."
+            class="mb-2 mt-2"
+          />
+        </div>
+        <div class="form-control">
+          <label for="amount"
+            ><strong>Amount</strong><br />
+            <strong class="text-danger">(negative - expense</strong>,
+            <strong class="text-success">positive - income)</strong>
+          </label>
+          <br />
+          <input
+            type="number"
+            id="amount"
+            placeholder="Enter amount..."
+            class="mb-2 mt-2"
+          />
+        </div>
+        <button><a href="index.html"></a>SAVE TRANSACTION</button>
+      </form>
+      <div class="widgets d-flex justify-content-between">
+        <a href="#wallet" class="wallet" title="My Wallet"
+          ><i class="fa-solid fa-wallet"></i
+        ></a>
+        <a href="report.html" class="report" title="See Report"
+          ><i class="fa-solid fa-chart-pie"></i
+        ></a>
+        <a href="#add-transaction" class="plus" title="Add Expense"
+          ><i class="fa-solid fa-plus"></i
+        ></a>
+        <a href="report.html" class="bank" title="Bank Accounts"
+          ><i class="fa-solid fa-money-check-dollar"></i
+        ></a>
+        <a href="main.html" class="home" title="Home"
+          ><i class="fa-solid fa-house"></i
+        ></a>
+      </div>
+    </div>
+    <script src="script.js"></script>
   </body>
 </html>
