--- a/main.html
+++ b/main.html
@@ -13,24 +13,156 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://kit.fontawesome.com/75f32e9ed7.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Expense Tracker</title>
+    <link rel="stylesheet" href="src/main.css" />
   </head>
-  <style>
-    body {
-      text-align: center;
-      margin: 40px;
-    }
-    a {
-      margin: 30px;
-    }
-  </style>
   <body>
-    <nav>
-      <p>Privacy & Cookie Policy</p>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <img src="images/piggy.png" alt="Piggy Bank" width="100" />
+        <a class="navbar-brand text-info-emphasis fs-3 fw-lighter" href="#">
+          Money Manager</a
+        >
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div
+          class="collapse navbar-collapse justify-content-end"
+          id="navbarNavAltMarkup"
+        >
+          <div class="navbar-nav">
+            <a class="nav-link active me-5" aria-current="page" href="#"
+              >Privacy & Cookies Policy</a
+            >
+            <a class="nav-link active me-5" href="#contact">Contact</a>
+          </div>
+        </div>
+      </div>
     </nav>
-    <h1 class="text-center">MONEY MANAGER</h1>
-    <a href="index.html" class="btn btn-success p-4">LAUNCH APP</a>
-    <script src="script.js"></script>
+    <header>
+      <span class="header-container">
+        <h1>MONEY MANAGEMENT MADE EASIER</h1>
+
+        <span class="buttons">
+          <a href="#features" class="features btn btn-danger p-4">FEATURES</a>
+          <a href="index.html" class="launch btn btn-success p-4"
+            >LAUNCH DEMO APP</a
+          >
+        </span>
+      </span>
+    </header>
+    <div class="container">
+      <h2 id="features" class="text-center">FEATURES</h2>
+      <p class="text-center">
+        Organize your incomes, manage your family budget, keep track of expenses
+        while traveling and understand where all your money are with some great,
+        yet simple features.
+      </p>
+
+      <div class="row mb-4">
+        <div class="col-sm-6">
+          <a href="" class="first-icon"><i class="fa-solid fa-sliders"></i></a>
+          <h5>INTUITIVE & CLEAN</h5>
+          <p class="paragraph">
+            Intuitive, clean and simple way of adding daily expenses and
+            incomes. main screen calendar that gives a quick monthly overview
+            over all transactions
+          </p>
+        </div>
+
+        <div class="col-sm-6">
+          <a href="" class="second-icon"
+            ><i class="fa-solid fa-file-shield"></i
+          ></a>
+          <h5>SECURE</h5>
+          <p class="paragraph">
+            Your data is always safe wherever your are and what ever device you
+            are using.
+          </p>
+        </div>
+
+        <div class="col-sm-6">
+          <a href="" class="third-icon"
+            ><i class="fa-brands fa-squarespace"></i
+          ></a>
+          <h5>COMPREHENSIVE</h5>
+          <p class="paragraph">
+            A compact yet comprehensive list of expense and income categories.
+            Add or edit categories, if defaults don’t work for you
+          </p>
+        </div>
+
+        <div class="col-sm-6">
+          <a href="" class="fourth-icon"><i class="fa-solid fa-gear"></i></a>
+          <h5>RELIABLE & USEFUL</h5>
+          <p class="paragraph">
+            Set reminders for future inflow or outflow transactions and
+            recurrent payments – never miss another deadline
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <section>
+      <h3 class="text-center">ABOUT</h3>
+      <p class="text-center fs-5">
+        This expense tracker application is dedicated in helping you manage your
+        financial life.
+      </p>
+      <div class="row mt-5">
+        <div class="col one">
+          <p>Very simple, intuitive and straight forward</p>
+        </div>
+        <div class="col two">
+          If you are looking for a complicated money management application that
+          promises you to do everything you ever wanted, then you have to keep
+          looking because this app is not for you. This expense tracker &
+          manager promises to be a very simple, intuitive and straight forward
+          mobile application that helps and assists you to track all your
+          expenses, manage your budgets/costs and organize your spending,
+          enabling you to make savings and order in your financial life.
+          Dedicated in helping you manage your financial life, easily,
+          efficiently and with no complications.
+        </div>
+        <div class="col three">
+          <ul>
+            <li><strong class="one">100 </strong>EASY TO USE</li>
+            <li><strong class="two">100 </strong>COMPREHENSIVE</li>
+            <li><strong class="three">100 </strong>SAFE AND SECURE</li>
+            <li>
+              <strong class="four">100 </strong>YOUR BESTIE
+              <span><i class="fa-regular fa-face-grin-wink"></i></span>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <footer class="icons d-flex justify-content-center mt-4" id="contact">
+        <a href="#" class="me-5 fs-2"><i class="fa-brands fa-x-twitter"></i></a>
+        <a href="#" class="fs-2"><i class="fa-brands fa-facebook"></i></a>
+        <a
+          href="https://github.com/loycekalen/expense-tracker-app"
+          class="ms-5 fs-2"
+          target="_blank"
+          ><i class="fa-brands fa-github"></i
+        ></a>
+      </footer>
+    </section>
   </body>
 </html>
