--- a/report.html
+++ b/report.html
@@ -11,19 +11,62 @@
   </head>
   <style>
     a {
-      color: purple;
-      font-size: 30px;
+      color: rgb(35, 226, 226);
+      font-size: 60px;
     }
     a:hover {
-      font-size: 40px;
+      font-size: 80px;
+      color: red;
     }
     body {
       text-align: center;
       margin: 50px;
     }
+    body {
+      background-color: #151719;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+    }
+    .waviy {
+      position: relative;
+      -webkit-box-reflect: below -20px linear-gradient(transparent, rgba(0, 0, 0, 0.2));
+      font-size: 60px;
+    }
+    .waviy span {
+      font-family: "Alfa Slab One", cursive;
+      position: relative;
+      display: inline-block;
+      color: #fff;
+      text-transform: uppercase;
+      animation: waviy 1s infinite;
+      animation-delay: calc(0.1s * var(--i));
+    }
+    @keyframes waviy {
+      0%,
+      40%,
+      100% {
+        transform: translateY(0);
+      }
+      20% {
+        transform: translateY(-20px);
+      }
+    }
   </style>
   <body>
     <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
-    <h1>COMING SOON...</h1>
+    <div class="waviy">
+      <span style="--i: 1">C</span>
+      <span style="--i: 2">O</span>
+      <span style="--i: 3">M</span>
+      <span style="--i: 4">I</span>
+      <span style="--i: 5">N</span>
+      <span style="--i: 6">G</span>
+      <span style="--i: 7">S</span>
+      <span style="--i: 8">0</span>
+      <span style="--i: 9">0</span>
+      <span style="--i: 10">N</span>
+    </div>
   </body>
 </html>
