added the webpage responsiveness

--- a/main.html
+++ b/main.html
@@ -30,7 +30,7 @@
       <div class="container-fluid">
         <img src="images/piggy.png" alt="Piggy Bank" width="100" />
         <a class="navbar-brand text-info-emphasis fs-3 fw-lighter" href="#">
-          Money Manager</a
+          Expense Tracker</a
         >
         <button
           class="navbar-toggler"
